# mcp-websearch-poc

./: LICENSE  README.md  mcp_client.py  mcp_server.py  pyproject.toml
